--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 PK/.DS_Store
 
 PK/PK.xcodeproj/project.xcworkspace/xcuserdata/pseo.xcuserdatad/UserInterfaceState.xcuserstate
+
+PK/PK.xcodeproj/project.xcworkspace/xcuserdata/fiicere.xcuserdatad/UserInterfaceState.xcuserstate
