--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ PK/.DS_Store
 PK/PK.xcodeproj/project.xcworkspace/xcuserdata/pseo.xcuserdatad/UserInterfaceState.xcuserstate
 
 PK/PK.xcodeproj/project.xcworkspace/xcuserdata/fiicere.xcuserdatad/UserInterfaceState.xcuserstate
+
+PK/PK/Projectile.m
